fixed linking score error

--- a/notebooks/evaluation/evaluation.ipynb
+++ b/notebooks/evaluation/evaluation.ipynb
@@ -302,6 +302,7 @@
     "            break\n",
     "        elif label not in [\"p\", \"l\"]:\n",
     "            text_tokens[text_tokens_text_index][text_tokens_token_index][\"gold_tag\"] = \"O\"\n",
+    "            last_label = label\n",
     "        else:\n",
     "            iob = \"I\" if last_label == label else \"B\"\n",
     "            text_tokens[text_tokens_text_index][text_tokens_token_index][\"gold_tag\"] = f\"{iob}-{label_names[label]}\"\n",
@@ -469,18 +470,18 @@
     "    for gold_entities_text in gold_entities:\n",
     "        for gold_entity in gold_entities_text:\n",
     "            while text_tokens[text_tokens_text_id][text_tokens_token_id][\"start\"] < gold_entity[\"start\"]:\n",
-    "                text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"NIL\"\n",
+    "                text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"_\"\n",
     "                text_tokens_token_id += 1\n",
     "                if text_tokens_token_id >= len(text_tokens[text_tokens_text_id]):\n",
     "                    break\n",
     "            while text_tokens_token_id < len(text_tokens[text_tokens_text_id]) and text_tokens[text_tokens_text_id][text_tokens_token_id][\"end\"] <= gold_entity[\"end\"]:\n",
     "                if \"wikidata_id\" not in gold_entity:\n",
-    "                    text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"NIL\"\n",
+    "                    text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"_\"\n",
     "                else:\n",
     "                   text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = gold_entity[\"wikidata_id\"][\"id\"]\n",
     "                text_tokens_token_id += 1\n",
     "        while text_tokens_token_id < len(text_tokens[text_tokens_text_id]):\n",
-    "            text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"NIL\"\n",
+    "            text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"_\"\n",
     "            text_tokens_token_id += 1\n",
     "        text_tokens_text_id += 1\n",
     "        text_tokens_token_id = 0\n",
@@ -544,11 +545,11 @@
     "            sent_id = 0\n",
     "            for token in text:\n",
     "                if token[\"sent_id\"] != sent_id:\n",
-    "                    print(\"-\\tO\\tO\\tNIL\\tNIL\\tO\", file=hipe_file)\n",
+    "                    print(\"-\\tO\\tO\\t_\\t_\\tO\", file=hipe_file)\n",
     "                    sent_id = token[\"sent_id\"]\n",
     "                print(token[\"text\"], token[data_column_name], token[data_column_name], \n",
     "                                     token[\"wikidata_id\"], token[\"wikidata_id\"], \"O\", sep=\"\\t\", file=hipe_file)\n",
-    "            print(\"-\\tO\\tO\\tNIL\\tNIL\\tO\", file=hipe_file)\n",
+    "            print(\"-\\tO\\tO\\t_\\t_\\tO\", file=hipe_file)\n",
     "        hipe_file.close()"
    ]
   },
@@ -575,13 +576,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -593,22 +587,8 @@
     "    for label in labels:\n",
     "        print(f\"{label}:\", {key: round(100*value, 1) \n",
     "              for key, value in hipe_scores['1']['NEL-LIT']['TIME-ALL']['LED-ALL'][label]['exact'].items() \n",
-    "              if key in ['P_micro', 'R_micro', 'F1_micro']})"
+    "              if regex.search(\"micro\", key)})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -623,7 +603,7 @@
       "data_format_true [[3790]]\n",
       "data_format_pred [[3790]]\n",
       "\u001b[1mHIPE Analysis\u001b[0m\n",
-      "ALL: {'P_micro': 97.3, 'R_micro': 96.7, 'F1_micro': 97.0}\n"
+      "ALL: {'P_micro': 62.1, 'R_micro': 78.6, 'F1_micro': 69.4}\n"
      ]
     }
    ],
@@ -638,20 +618,6 @@
     "\n",
     "evaluate_linking(text_tokens_gold, text_tokens_machine)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
