--- a/notebooks/evaluation/evaluation.ipynb
+++ b/notebooks/evaluation/evaluation.ipynb
@@ -95,7 +95,7 @@
     "id": "5fPMK5cuxbnn"
    },
    "source": [
-    "Next, we test if the HIPE-scorer is available. If it is not, we install it"
+    "Next, we load the HIPE-scorer."
    ]
   },
   {
@@ -120,32 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "BASE_DIR = os.getcwd()\n",
-    "\n",
-    "if not os.path.exists(\"HIPE-scorer/clef_evaluation.py\"):\n",
-    "    ! git clone https://github.com/enriching-digital-heritage/HIPE-scorer.git\n",
-    "    os.chdir(os.path.join(BASE_DIR, \"HIPE-scorer\"))\n",
-    "    ! pip install -r requirements.txt\n",
-    "    ! pip install .\n",
-    "    os.chdir(BASE_DIR)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, we load the HIPE-scorer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(os.path.join(BASE_DIR, \"HIPE-scorer\"))\n",
-    "import clef_evaluation\n",
-    "os.chdir(BASE_DIR)"
+    "clef_evaluation = utils.load_hipe_scorer()"
    ]
   },
   {
@@ -449,6 +424,232 @@
     "gold_lines = read_lines_from_file(NER_ANNOTATIONS_FILE)\n",
     "text_tokens =  add_gold_entities_to_tokens(gold_lines, text_tokens)\n",
     "evaluate(text_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 0,\n",
+       "  'text': 'Statuette',\n",
+       "  'start': 0,\n",
+       "  'end': 9,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 0,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 1,\n",
+       "  'text': 'of',\n",
+       "  'start': 10,\n",
+       "  'end': 12,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 0,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 2,\n",
+       "  'text': 'the',\n",
+       "  'start': 13,\n",
+       "  'end': 16,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 0,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 3,\n",
+       "  'text': 'god',\n",
+       "  'start': 17,\n",
+       "  'end': 20,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 0,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 4,\n",
+       "  'text': 'Anubis',\n",
+       "  'start': 21,\n",
+       "  'end': 27,\n",
+       "  'ws': False,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 0,\n",
+       "  'machine_tag': 'B-PERSON',\n",
+       "  'gold_tag': 'B-PERSON'},\n",
+       " {'id': 5,\n",
+       "  'text': '.',\n",
+       "  'start': 27,\n",
+       "  'end': 28,\n",
+       "  'ws': True,\n",
+       "  'is_punct': True,\n",
+       "  'sent_id': 0,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 6,\n",
+       "  'text': 'Bronze',\n",
+       "  'start': 29,\n",
+       "  'end': 35,\n",
+       "  'ws': False,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 1,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 7,\n",
+       "  'text': '.',\n",
+       "  'start': 35,\n",
+       "  'end': 36,\n",
+       "  'ws': True,\n",
+       "  'is_punct': True,\n",
+       "  'sent_id': 1,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 8,\n",
+       "  'text': 'Late',\n",
+       "  'start': 37,\n",
+       "  'end': 41,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 9,\n",
+       "  'text': 'Period',\n",
+       "  'start': 42,\n",
+       "  'end': 48,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 10,\n",
+       "  'text': '(',\n",
+       "  'start': 49,\n",
+       "  'end': 50,\n",
+       "  'ws': False,\n",
+       "  'is_punct': True,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 11,\n",
+       "  'text': '722',\n",
+       "  'start': 50,\n",
+       "  'end': 53,\n",
+       "  'ws': False,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 12,\n",
+       "  'text': '-',\n",
+       "  'start': 53,\n",
+       "  'end': 54,\n",
+       "  'ws': False,\n",
+       "  'is_punct': True,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 13,\n",
+       "  'text': '332',\n",
+       "  'start': 54,\n",
+       "  'end': 57,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 14,\n",
+       "  'text': 'BC',\n",
+       "  'start': 58,\n",
+       "  'end': 60,\n",
+       "  'ws': False,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 15,\n",
+       "  'text': ')',\n",
+       "  'start': 60,\n",
+       "  'end': 61,\n",
+       "  'ws': False,\n",
+       "  'is_punct': True,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 16,\n",
+       "  'text': '..',\n",
+       "  'start': 61,\n",
+       "  'end': 63,\n",
+       "  'ws': True,\n",
+       "  'is_punct': True,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 17,\n",
+       "  'text': 'Acquired',\n",
+       "  'start': 64,\n",
+       "  'end': 72,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 18,\n",
+       "  'text': 'before',\n",
+       "  'start': 73,\n",
+       "  'end': 79,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 19,\n",
+       "  'text': '1882',\n",
+       "  'start': 80,\n",
+       "  'end': 84,\n",
+       "  'ws': False,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 20,\n",
+       "  'text': '.',\n",
+       "  'start': 84,\n",
+       "  'end': 85,\n",
+       "  'ws': True,\n",
+       "  'is_punct': True,\n",
+       "  'sent_id': 2,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 21,\n",
+       "  'text': 'C.',\n",
+       "  'start': 86,\n",
+       "  'end': 88,\n",
+       "  'ws': True,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 3,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'},\n",
+       " {'id': 22,\n",
+       "  'text': '115',\n",
+       "  'start': 89,\n",
+       "  'end': 92,\n",
+       "  'ws': False,\n",
+       "  'is_punct': False,\n",
+       "  'sent_id': 3,\n",
+       "  'machine_tag': 'O',\n",
+       "  'gold_tag': 'O'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_tokens[0]"
    ]
   },
   {
