added disambiguation evaluation

--- a/notebooks/tasks/demo_qwen.ipynb
+++ b/notebooks/tasks/demo_qwen.ipynb
@@ -612,7 +612,7 @@
    ],
    "source": [
     "MODEL = \"qwen3:8b\"\n",
-    "MAX_PROCESSED = 100\n",
+    "MAX_PROCESSED = len(texts_input)\n",
     "\n",
     "texts_output = utils.ollama_run(MODEL, texts_input[:MAX_PROCESSED], make_prompt, in_colab)\n",
     "print(texts_output[1])"
@@ -832,32 +832,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.6 Evaluate named entities"
+    "## 2.6 Evaluate named entities\n",
+    "\n",
+    "We evaluate the named entity analysis of the model by comparing it with a golden standard with the [HIPE-scorer](https://github.com/hipe-eval/HIPE-scorer). First we load the scorer. Next convert the machine analysis to the required format. We load the golden standard and add the labels to the data structure with the machine analysis. Finally that data structure is sent to the HIPE-scorer which reports precision, recall and F scores."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Stela of Meh, scribe of the treasury in the temple of Ramesses II in the sanctuary of Re (in Heliopolis). Limestone. New Kingdom, 19th Dynasty, second half of the reign of Ramesses II-early reign of Merenptah, ca. 1240-1210 BC. Abydos (?).. Acquired befor'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_data[10][\"text_cleaned\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -869,8 +851,13 @@
       "data_format_true [[3790]]\n",
       "data_format_pred [[3790]]\n",
       "\u001b[1mHIPE Analysis\u001b[0m\n",
-      "  PERSON: {'P_micro': 96.1, 'R_micro': 84.2, 'F1_micro': 89.8}\n",
-      "LOCATION: {'P_micro': 76.9, 'R_micro': 76.9, 'F1_micro': 76.9}\n"
+      "╒══════════╤═══════════╤═══════════╤════════════╕\n",
+      "│ Label    │   P_micro │   R_micro │   F1_micro │\n",
+      "╞══════════╪═══════════╪═══════════╪════════════╡\n",
+      "│ PERSON   │      96.1 │      84.2 │       89.8 │\n",
+      "├──────────┼───────────┼───────────┼────────────┤\n",
+      "│ LOCATION │      76.9 │      76.9 │       76.9 │\n",
+      "╘══════════╧═══════════╧═══════════╧════════════╛\n"
      ]
     }
    ],
@@ -941,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1113,19 +1100,8 @@
      "output_type": "stream",
      "text": [
       "Finished processing\n",
-      "️✅ Saved data to file disambiguation_cache_wikidata_b5f67d9dd533b14231a6b9d8134eaa092294098d.json\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m entities \u001b[38;5;241m=\u001b[39m extract_entities_from_ner_input(texts_input)\n\u001b[1;32m      2\u001b[0m entities \u001b[38;5;241m=\u001b[39m find_wikidata_candidates_for_entities(entities)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m({key: entities[\u001b[38;5;241m0\u001b[39m][key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mentity_text\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcandidates\u001b[39m\u001b[38;5;124m'\u001b[39m]})\n",
-      "Cell \u001b[0;32mIn[27], line 3\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m entities \u001b[38;5;241m=\u001b[39m extract_entities_from_ner_input(texts_input)\n\u001b[1;32m      2\u001b[0m entities \u001b[38;5;241m=\u001b[39m find_wikidata_candidates_for_entities(entities)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m({key: \u001b[43mentities\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m[key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mentity_text\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcandidates\u001b[39m\u001b[38;5;124m'\u001b[39m]})\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "️✅ Saved data to file disambiguation_cache_wikidata_353f41738ee289500f12db68e8af1c5095a928e0.json\n",
+      "{'entity_text': 'Amenhotep III', 'candidates': [{'id': 'Q42606', 'description': 'ninth Pharaoh of the Eighteenth dynasty of Egypt'}, {'id': 'Q55018696', 'description': 'operatic character in the opera Akhnaten by Philip Glass; father of Akhenaton'}, {'id': 'Q96185335', 'description': 'Facsimile, Anen (TT 120), Amenhotep III, Queen Tiye, kiosk by Nina de Garis Davies (MET, 33.8.8)'}, {'id': 'Q96185392', 'description': 'Facsimile, Anen, TT 226, Amenhotep III, Mutemwia by Nina de Garis Davies (MET, 15.5.1)'}, {'id': 'Q97778073', 'description': 'scholarly book'}, {'id': 'Q116247775', 'description': 'head, Amenhotep III, Blue Crown at the Metropolitan Museum of Art (MET, 56.138)'}]}\n"
      ]
     }
    ],
@@ -1153,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,12 +1185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving entity \"Bagnani\" of text 99 from cache\n",
+      "Finished processing\n",
+      "️✅ Saved data to file disambiguation_cache_llm_eef8ccc02cff1ca9d5325cbb82d0954414eed154.json\n",
+      "{'entity_text': 'Amenhotep III', 'text': 'Statue of the goddess Sekhmet. Granodiorite. New Kingdom, 18th Dynasty, reign of Amenhotep III (1390-1353 BC). Thebes.. Drovetti collection (1824). C. 256', 'wikidata_id': {'id': 'Q42606', 'description': 'ninth Pharaoh of the Eighteenth dynasty of Egypt', 'model': 'qwen3:8b'}}\n"
+     ]
+    }
+   ],
    "source": [
     "MODEL = \"qwen3:8b\"\n",
-    "MAX_PROCESSED = 3\n",
+    "MAX_PROCESSED = len(texts_input)\n",
     "MAX_PROCESSED_ENTITIES = len([entity for entity in entities if entity[\"text_id\"] < MAX_PROCESSED])\n",
     "\n",
     "processed_entities = ollama_wikidata_id_selection(MODEL, entities[:MAX_PROCESSED_ENTITIES])\n",
@@ -1240,13 +1227,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statue of the goddess Sekhmet. Granodiorite. New Kingdom, 18th Dynasty, reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span><sup>Q42606</sup> (1390-1353 BC). <span style=\"border: 1px solid black; color: green;\">Thebes</span><sup>Q101583</sup>.. <span style=\"border: 1px solid black; color: red;\">Drovetti</span><sup>Q822895</sup> collection (1824). C. 256"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the goddess Bastet. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span><sup>Q822895</sup> collection (1824). C. 271"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "for text_id, text in enumerate(texts_output):\n",
     "    if text_id < 3:\n",
     "        display(HTML(utils.mark_entities_in_text(text[\"text_llm_output\"], text[\"entities\"])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.6 Evaluate entity disambiguation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true: 1 pred: 1\n",
+      "data_format_true [[3790]]\n",
+      "data_format_pred [[3790]]\n",
+      "\u001b[1mHIPE Analysis\u001b[0m\n",
+      "╒═════════╤═══════════╤═══════════╤════════════╕\n",
+      "│ Label   │   P_micro │   R_micro │   F1_micro │\n",
+      "╞═════════╪═══════════╪═══════════╪════════════╡\n",
+      "│ ALL     │      70.6 │      83.5 │       76.5 │\n",
+      "╘═════════╧═══════════╧═══════════╧════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "ED_ANNOTATIONS_FILE = \"disambiguation_gold.json\"\n",
+    "\n",
+    "gold_entities = utils.read_json_file(ED_ANNOTATIONS_FILE)\n",
+    "text_tokens_gold = utils.add_gold_linking_entities_to_text_tokens(copy.deepcopy(text_tokens), gold_entities)\n",
+    "\n",
+    "machine_entities = utils.add_char_offsets_to_processed_entities(processed_entities)\n",
+    "text_tokens_machine = utils.add_gold_linking_entities_to_text_tokens(copy.deepcopy(text_tokens), machine_entities)\n",
+    "\n",
+    "utils.evaluate_linking(text_tokens_gold, text_tokens_machine, clef_evaluation)"
    ]
   },
   {
@@ -1314,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,9 +1447,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text_cleaned': 'Statue of the goddess Sekhmet. Granodiorite. New Kingdom, 18th Dynasty, reign of Amenhotep III (1390-1353 BC). Thebes.. Drovetti collection (1824). C. 256', 'entities': [{'text': 'Amenhotep III', 'label': 'PERSON', 'start_char': 81, 'end_char': 94, 'wikidata_id': {'id': 'Q42606', 'description': 'ninth Pharaoh of the Eighteenth dynasty of Egypt', 'model': 'qwen3:8b'}}, {'text': 'Thebes', 'label': 'LOCATION', 'start_char': 111, 'end_char': 117, 'wikidata_id': {'id': 'Q101583', 'description': 'ancient Egyptian city', 'model': 'qwen3:8b'}}, {'text': 'Drovetti', 'label': 'PERSON', 'start_char': 120, 'end_char': 128, 'wikidata_id': {'id': 'Q822895', 'description': 'Italian diplomat, explorer and scholar', 'model': 'qwen3:8b'}}]}\n"
+     ]
+    }
+   ],
    "source": [
     "texts_input = copy.deepcopy(texts_output)\n",
     "print({\"text_cleaned\": texts_input[1][\"text_cleaned\"], \n",
@@ -1410,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,12 +1529,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing\n",
+      "️✅ Saved data to file linking_cache_e42ee694c3cf82013f061d715a2674f1c657b267.json\n",
+      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': []}\n"
+     ]
+    }
+   ],
    "source": [
     "model = \"qwen3:8b\"\n",
-    "MAX_PROCESSED = 3\n",
+    "MAX_PROCESSED = 1\n",
     "\n",
     "processed_entities = ollama_link_suggestion(model, texts_input[:MAX_PROCESSED])\n",
     "texts_output = add_linking_data_to_texts_input(texts_input[:MAX_PROCESSED], processed_entities)\n",
@@ -1495,9 +1577,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "for text_id, text in enumerate(texts_output):\n",
     "    if text_id < 3:\n",
