increase default linking volume

--- a/notebooks/tasks/demo_qwen.ipynb
+++ b/notebooks/tasks/demo_qwen.ipynb
@@ -1529,16 +1529,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Retrieving entity \"Drovetti\" of text 10 from cache\n",
       "Finished processing\n",
-      "️✅ Saved data to file linking_cache_e42ee694c3cf82013f061d715a2674f1c657b267.json\n",
-      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': []}\n"
+      "️✅ Saved data to file linking_cache_042f78afe60166f77441416d4eef052792ed3028.json\n",
+      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'entity_text': 'Amenhotep III', 'wikidata_id': {'id': 'Q42606', 'description': 'ninth Pharaoh of the Eighteenth dynasty of Egypt', 'model': 'qwen3:8b'}, 'link': '5'}, {'entity_text': 'Thebes', 'wikidata_id': {'id': 'Q101583', 'description': 'ancient Egyptian city', 'model': 'qwen3:8b'}, 'link': '7'}, {'entity_text': 'Drovetti', 'wikidata_id': {'id': 'Q822895', 'description': 'Italian diplomat, explorer and scholar', 'model': 'qwen3:8b'}, 'link': '4'}]}\n"
      ]
     }
    ],
@@ -1551,7 +1552,7 @@
     "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
     "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
     "                     \"wikidata_id\": entity[\"wikidata_id\"], \n",
-    "                     \"link\": list(entity[\"link\"].values())[0]} for entity in texts_output[0][\"entities\"]]})"
+    "                     \"link\": list(entity[\"link\"].values())[0]} for entity in texts_output[1][\"entities\"]]})"
    ]
   },
   {
@@ -1584,6 +1585,30 @@
      "data": {
       "text/html": [
        "Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statue of the goddess Sekhmet. Granodiorite. New Kingdom, 18th Dynasty, reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span><sup>Q42606,5</sup> (1390-1353 BC). <span style=\"border: 1px solid black; color: green;\">Thebes</span><sup>Q101583,7</sup>.. <span style=\"border: 1px solid black; color: red;\">Drovetti</span><sup>Q822895,4</sup> collection (1824). C. 256"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the goddess Bastet. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span><sup>Q822895,4</sup> collection (1824). C. 271"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
